--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,29 @@
 This is a list of current and past developers working on the XtraBYtes core software,
 in order approximately corresponding to the time they joined the team.
 
+Dev and Board Members
+
+ccrevolution
+jahr
+ccnccn
+
+
+shad
+jasper
+ghosty
+alienrobot
+jcpbs
+lostwords
+bumbacoin
+jshade5
+tom
+eggsandspamm
+mica3006
+ashmore11
+jordanspeizer
+bob.loblaw
+josephanglada
+bradritter 
+rickrosenburg
+onedeveloper
+crypt0kill3r
