--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,8 @@
 This is a list of current and past developers working on the XtraBYtes core software,
 in order approximately corresponding to the time they joined the team.
 
-Dev and Board Members
+XtraBYtes Founders and Developers
+=================================
 
 bigboss154
 
@@ -27,7 +28,7 @@ jhar
 
 vanfly
 
--------------------
+===============
 
 shad
 
